@startuml
skinparam defaultFontName Consolas

' There maybe one or more of these in a given day
enum TradingScheduleType {
    OrderEntry
    Auction
    Trading
}

class TradingSchedule {
    startSchedule       time.Time
    endSchedule         time.Time
    tradingScheduleType TradingScheduleType
    InTradingSchedule(time.Time)  bool
}

class DayTradingSchedule {
	tradingSchedule     []TradingSchedule
    InTradingSchedule(time.Time)  TradingSchedule
}
DayTradingSchedule *-- TradingSchedule


class TradingCalendar {
    calendar map[Date]DayTradingSchedule
}
TradingCalendar *-- DayTradingSchedule


@enduml
